--- a/app/src/main/res/layout/activity_not_ekle.xml
+++ b/app/src/main/res/layout/activity_not_ekle.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF8"
-    tools:context=".NotEdit">
+    tools:context=".NotEkle">
 
     <EditText
-        android:id="@+id/not_baslik_edit"
+        android:id="@+id/not_baslik"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,15 +26,15 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/not_metin_edit"
+        android:id="@+id/not_metin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintBottom_toTopOf="@id/delete_button_edit"
-        app:layout_constraintTop_toBottomOf="@id/not_baslik_edit"
+        app:layout_constraintBottom_toTopOf="@id/kaydet_button"
+        app:layout_constraintTop_toBottomOf="@id/not_baslik"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:background="@null"
@@ -45,23 +45,7 @@
         app:fontFamily="@font/roboto" />
 
     <Button
-        android:id="@+id/delete_button_edit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/kaydet_button_edit"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/sil"
-        app:fontFamily="@font/roboto_medium"
-        android:textSize="14sp"
-        android:textColor="#FFFFFF"
-        android:background="#d11a2a" />
-
-    <Button
-        android:id="@+id/kaydet_button_edit"
+        android:id="@+id/kaydet_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
